<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
    <TextView android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#a4c639"
        android:textStyle="bold"
        android:textSize="14pt"
        android:gravity="center"
        />
    
    <TextView android:id="@+id/main_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text1"
        android:textSize="7pt"
        android:gravity="center"
        android:layout_below="@id/main_logo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    
    <TextView android:id="@+id/main_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text2"
        android:textSize="9pt"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/main_text1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/main_text2"
        >
        <EditText android:id="@+id/main_email"
	        android:layout_width="0dp"
	        android:layout_weight=".8"
	        android:layout_height="match_parent"
	        android:hint="@string/main_email"
	        android:background="#ccc"
	        android:textColorHint="#fff"
	        android:padding="5dp"
	        android:layout_marginTop="5dp"
	        />
	    
	    <Button android:id="@+id/main_go"
	        android:layout_width="0dp"
	        android:layout_weight=".2"
	        android:layout_height="match_parent"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:text="@string/main_go"
	        android:onClick="go"
	        />
    </LinearLayout>
    
</RelativeLayout>